// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot 1`] = `
<div
  class="rdp "
>
  <div
    class="rdp-months"
  >
    <div
      class="rdp-month rdp-caption_start rdp-caption_end"
    >
      <div
        class="rdp-caption"
      >
        <h2
          aria-atomic="true"
          aria-live="polite"
          class="rdp-caption_label"
          id="react-day-picker-1"
        >
          November 2020
        </h2>
        <div
          class="rdp-nav"
        >
          <button
            aria-label="Go to previous month"
            class="rdp-button_reset rdp-button rdp-nav_button rdp-nav_button_previous"
            name="previous-month"
            type="button"
          >
            <svg
              class="rdp-nav_icon"
              height="16px"
              viewBox="0 0 120 120"
              width="16px"
            >
              <path
                d="M69.490332,3.34314575 C72.6145263,0.218951416 77.6798462,0.218951416 80.8040405,3.34314575 C83.8617626,6.40086786 83.9268205,11.3179931 80.9992143,14.4548388 L80.8040405,14.6568542 L35.461,60 L80.8040405,105.343146 C83.8617626,108.400868 83.9268205,113.317993 80.9992143,116.454839 L80.8040405,116.656854 C77.7463184,119.714576 72.8291931,119.779634 69.6923475,116.852028 L69.490332,116.656854 L18.490332,65.6568542 C15.4326099,62.5991321 15.367552,57.6820069 18.2951583,54.5451612 L18.490332,54.3431458 L69.490332,3.34314575 Z"
                fill="currentColor"
                fill-rule="nonzero"
              />
            </svg>
          </button>
          <button
            aria-label="Go to next month"
            class="rdp-button_reset rdp-button rdp-nav_button rdp-nav_button_next"
            name="next-month"
            type="button"
          >
            <svg
              class="rdp-nav_icon"
              height="16px"
              viewBox="0 0 120 120"
              width="16px"
            >
              <path
                d="M49.8040405,3.34314575 C46.6798462,0.218951416 41.6145263,0.218951416 38.490332,3.34314575 C35.4326099,6.40086786 35.367552,11.3179931 38.2951583,14.4548388 L38.490332,14.6568542 L83.8333725,60 L38.490332,105.343146 C35.4326099,108.400868 35.367552,113.317993 38.2951583,116.454839 L38.490332,116.656854 C41.5480541,119.714576 46.4651794,119.779634 49.602025,116.852028 L49.8040405,116.656854 L100.804041,65.6568542 C103.861763,62.5991321 103.926821,57.6820069 100.999214,54.5451612 L100.804041,54.3431458 L49.8040405,3.34314575 Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
      <table
        aria-labelledby="react-day-picker-1"
        class="rdp-table"
        role="grid"
      >
        <thead
          class="rdp-head"
        >
          <tr
            class="rdp-head_row"
          >
            <th
              class="rdp-head_cell"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Su
              </span>
              <span
                class="rdp-vhidden"
              >
                Sunday
              </span>
            </th>
            <th
              class="rdp-head_cell"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Mo
              </span>
              <span
                class="rdp-vhidden"
              >
                Monday
              </span>
            </th>
            <th
              class="rdp-head_cell"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Tu
              </span>
              <span
                class="rdp-vhidden"
              >
                Tuesday
              </span>
            </th>
            <th
              class="rdp-head_cell"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                We
              </span>
              <span
                class="rdp-vhidden"
              >
                Wednesday
              </span>
            </th>
            <th
              class="rdp-head_cell"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Th
              </span>
              <span
                class="rdp-vhidden"
              >
                Thursday
              </span>
            </th>
            <th
              class="rdp-head_cell"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Fr
              </span>
              <span
                class="rdp-vhidden"
              >
                Friday
              </span>
            </th>
            <th
              class="rdp-head_cell"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Sa
              </span>
              <span
                class="rdp-vhidden"
              >
                Saturday
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          class="rdp-tbody"
        >
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell"
            >
              <button
                aria-label="1st November (Sunday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                1
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="2nd November (Monday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                2
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="3rd November (Tuesday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                3
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="4th November (Wednesday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                4
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="5th November (Thursday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                5
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="6th November (Friday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                6
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="7th November (Saturday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                7
              </button>
            </td>
          </tr>
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell"
            >
              <button
                aria-label="8th November (Sunday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                8
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="9th November (Monday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                9
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="10th November (Tuesday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                10
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="11th November (Wednesday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                11
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="12th November (Thursday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                12
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="13th November (Friday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                13
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="14th November (Saturday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                14
              </button>
            </td>
          </tr>
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell"
            >
              <button
                aria-label="15th November (Sunday)"
                aria-pressed="true"
                class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_start"
                name="day"
                tabindex="0"
                type="button"
              >
                15
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="16th November (Monday)"
                aria-pressed="true"
                class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_middle"
                name="day"
                tabindex="-1"
                type="button"
              >
                16
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="17th November (Tuesday)"
                aria-pressed="true"
                class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_middle"
                name="day"
                tabindex="-1"
                type="button"
              >
                17
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="18th November (Wednesday)"
                aria-pressed="true"
                class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_middle"
                name="day"
                tabindex="-1"
                type="button"
              >
                18
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="19th November (Thursday)"
                aria-pressed="true"
                class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_end"
                name="day"
                tabindex="-1"
                type="button"
              >
                19
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="20th November (Friday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                20
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="21st November (Saturday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                21
              </button>
            </td>
          </tr>
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell"
            >
              <button
                aria-label="22nd November (Sunday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                22
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="23rd November (Monday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                23
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="24th November (Tuesday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                24
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="25th November (Wednesday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                25
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="26th November (Thursday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                26
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="27th November (Friday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                27
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="28th November (Saturday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                28
              </button>
            </td>
          </tr>
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell"
            >
              <button
                aria-label="29th November (Sunday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                29
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="30th November (Monday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                30
              </button>
            </td>
            <td
              class="rdp-cell"
            />
            <td
              class="rdp-cell"
            />
            <td
              class="rdp-cell"
            />
            <td
              class="rdp-cell"
            />
            <td
              class="rdp-cell"
            />
          </tr>
        </tbody>
        <tfoot
          class="rdp-tfoot"
        >
          <tr>
            <td
              colspan="8"
            >
              <p>
                November 15th, 2020
                –
                November 19th, 2020
              </p>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;

exports[`when a day in the range is clicked when the day is clicked again when a day in the range is clicked again should match the snapshot 1`] = `
<div
  class="rdp "
>
  <div
    class="rdp-months"
  >
    <div
      class="rdp-month rdp-caption_start rdp-caption_end"
    >
      <div
        class="rdp-caption"
      >
        <h2
          aria-atomic="true"
          aria-live="polite"
          class="rdp-caption_label"
          id="react-day-picker-28"
        >
          November 2020
        </h2>
        <div
          class="rdp-nav"
        >
          <button
            aria-label="Go to previous month"
            class="rdp-button_reset rdp-button rdp-nav_button rdp-nav_button_previous"
            name="previous-month"
            type="button"
          >
            <svg
              class="rdp-nav_icon"
              height="16px"
              viewBox="0 0 120 120"
              width="16px"
            >
              <path
                d="M69.490332,3.34314575 C72.6145263,0.218951416 77.6798462,0.218951416 80.8040405,3.34314575 C83.8617626,6.40086786 83.9268205,11.3179931 80.9992143,14.4548388 L80.8040405,14.6568542 L35.461,60 L80.8040405,105.343146 C83.8617626,108.400868 83.9268205,113.317993 80.9992143,116.454839 L80.8040405,116.656854 C77.7463184,119.714576 72.8291931,119.779634 69.6923475,116.852028 L69.490332,116.656854 L18.490332,65.6568542 C15.4326099,62.5991321 15.367552,57.6820069 18.2951583,54.5451612 L18.490332,54.3431458 L69.490332,3.34314575 Z"
                fill="currentColor"
                fill-rule="nonzero"
              />
            </svg>
          </button>
          <button
            aria-label="Go to next month"
            class="rdp-button_reset rdp-button rdp-nav_button rdp-nav_button_next"
            name="next-month"
            type="button"
          >
            <svg
              class="rdp-nav_icon"
              height="16px"
              viewBox="0 0 120 120"
              width="16px"
            >
              <path
                d="M49.8040405,3.34314575 C46.6798462,0.218951416 41.6145263,0.218951416 38.490332,3.34314575 C35.4326099,6.40086786 35.367552,11.3179931 38.2951583,14.4548388 L38.490332,14.6568542 L83.8333725,60 L38.490332,105.343146 C35.4326099,108.400868 35.367552,113.317993 38.2951583,116.454839 L38.490332,116.656854 C41.5480541,119.714576 46.4651794,119.779634 49.602025,116.852028 L49.8040405,116.656854 L100.804041,65.6568542 C103.861763,62.5991321 103.926821,57.6820069 100.999214,54.5451612 L100.804041,54.3431458 L49.8040405,3.34314575 Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
      <table
        aria-labelledby="react-day-picker-28"
        class="rdp-table"
        role="grid"
      >
        <thead
          class="rdp-head"
        >
          <tr
            class="rdp-head_row"
          >
            <th
              class="rdp-head_cell"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Su
              </span>
              <span
                class="rdp-vhidden"
              >
                Sunday
              </span>
            </th>
            <th
              class="rdp-head_cell"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Mo
              </span>
              <span
                class="rdp-vhidden"
              >
                Monday
              </span>
            </th>
            <th
              class="rdp-head_cell"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Tu
              </span>
              <span
                class="rdp-vhidden"
              >
                Tuesday
              </span>
            </th>
            <th
              class="rdp-head_cell"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                We
              </span>
              <span
                class="rdp-vhidden"
              >
                Wednesday
              </span>
            </th>
            <th
              class="rdp-head_cell"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Th
              </span>
              <span
                class="rdp-vhidden"
              >
                Thursday
              </span>
            </th>
            <th
              class="rdp-head_cell"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Fr
              </span>
              <span
                class="rdp-vhidden"
              >
                Friday
              </span>
            </th>
            <th
              class="rdp-head_cell"
              scope="col"
            >
              <span
                aria-hidden="true"
              >
                Sa
              </span>
              <span
                class="rdp-vhidden"
              >
                Saturday
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          class="rdp-tbody"
        >
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell"
            >
              <button
                aria-label="1st November (Sunday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                1
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="2nd November (Monday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                2
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="3rd November (Tuesday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                3
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="4th November (Wednesday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                4
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="5th November (Thursday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                5
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="6th November (Friday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                6
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="7th November (Saturday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                7
              </button>
            </td>
          </tr>
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell"
            >
              <button
                aria-label="8th November (Sunday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                8
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="9th November (Monday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                9
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="10th November (Tuesday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                10
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="11th November (Wednesday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                11
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="12th November (Thursday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                12
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="13th November (Friday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                13
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="14th November (Saturday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                14
              </button>
            </td>
          </tr>
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell"
            >
              <button
                aria-label="15th November (Sunday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                15
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="16th November (Monday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                16
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="17th November (Tuesday)"
                aria-pressed="true"
                class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_end rdp-day_range_start"
                name="day"
                tabindex="0"
                type="button"
              >
                17
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="18th November (Wednesday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                18
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="19th November (Thursday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                19
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="20th November (Friday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                20
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="21st November (Saturday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                21
              </button>
            </td>
          </tr>
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell"
            >
              <button
                aria-label="22nd November (Sunday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                22
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="23rd November (Monday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                23
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="24th November (Tuesday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                24
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="25th November (Wednesday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                25
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="26th November (Thursday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                26
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="27th November (Friday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                27
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="28th November (Saturday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                28
              </button>
            </td>
          </tr>
          <tr
            class="rdp-row"
          >
            <td
              class="rdp-cell"
            >
              <button
                aria-label="29th November (Sunday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                29
              </button>
            </td>
            <td
              class="rdp-cell"
            >
              <button
                aria-label="30th November (Monday)"
                class="rdp-button_reset rdp-button rdp-day"
                name="day"
                tabindex="-1"
                type="button"
              >
                30
              </button>
            </td>
            <td
              class="rdp-cell"
            />
            <td
              class="rdp-cell"
            />
            <td
              class="rdp-cell"
            />
            <td
              class="rdp-cell"
            />
            <td
              class="rdp-cell"
            />
          </tr>
        </tbody>
        <tfoot
          class="rdp-tfoot"
        >
          <tr>
            <td
              colspan="8"
            >
              <p>
                November 17th, 2020
                –
                November 17th, 2020
              </p>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;
